// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderInstructionBody > snapshot: ai-engineer junior, all focuses 1`] = `
"## Teach me while we work

I'm working toward becoming an AI Engineer. Do the task as you normally would, then teach me from it: after any non-trivial change, add a short **"What to learn from this"** note covering the points below, a few sentences per point. Don't skip this to save time. Pitch explanations at a junior level: assume programming fundamentals (variables, functions, async, HTTP), not experience. Define framework-specific and architecture concepts the first time they matter.

- **Explain the why, not just the what.** For each significant design decision (structure, naming, library, algorithm), say what alternative you rejected and why.
- **Name the patterns.** When you apply a best practice or design pattern, name it explicitly so I can look it up, and say what problem it exists to solve.
- **Open the framework's hood.** When framework behavior matters, explain what the framework actually does underneath — the mechanism, not just the API call.
- **Root-cause bugs.** When fixing a bug, explain the mechanism that caused it and how I could have caught it myself — not just the patch.
- **Teach the habit.** Point out the professional practices you're applying (error handling, testing, security, commit hygiene) and what goes wrong when teams skip them.
- **Language rules and quirks.** When code relies on subtle language semantics, call out the rule at play.

Since I'm aiming for AI engineering, go deeper whenever the work touches LLM or agent territory: prompt and context engineering, tool calling and agent loops, evals for nondeterministic systems, model selection trade-offs, and why agent architectures are shaped the way they are."
`;

exports[`renderInstructionBody > snapshot: backend senior, minimal focuses 1`] = `
"## Teach me while we work

I'm working toward becoming a Backend Developer. Do the task as you normally would, then teach me from it: after any non-trivial change, add a short **"What to learn from this"** note covering the points below, a few sentences per point. Don't skip this to save time. Keep explanations terse and senior-level: flag only non-obvious decisions, subtle pitfalls, and recent ecosystem changes — skip anything I can be assumed to know.

- **Explain the why, not just the what.** For each significant design decision (structure, naming, library, algorithm), say what alternative you rejected and why.
- **Name the patterns.** When you apply a best practice or design pattern, name it explicitly so I can look it up, and say what problem it exists to solve.

Since I'm aiming for backend work, go deeper on data modeling, API design, concurrency, and failure modes when they come up."
`;

exports[`renderInstructionBody > snapshot: frontend junior with custom focus 1`] = `
"## Teach me while we work

I'm working toward becoming a Frontend Developer. Do the task as you normally would, then teach me from it: after any non-trivial change, add a short **"What to learn from this"** note covering the points below, a few sentences per point. Don't skip this to save time. Pitch explanations at a junior level: assume programming fundamentals (variables, functions, async, HTTP), not experience. Define framework-specific and architecture concepts the first time they matter.

- **Explain the why, not just the what.** For each significant design decision (structure, naming, library, algorithm), say what alternative you rejected and why.
- **Name the patterns.** When you apply a best practice or design pattern, name it explicitly so I can look it up, and say what problem it exists to solve.
- **Open the framework's hood.** When framework behavior matters, explain what the framework actually does underneath — the mechanism, not just the API call.
- **CSS layout engines.** Teach me about this whenever it comes up in our work.

Since I'm aiming for frontend work, go deeper on rendering behavior, state management, browser mechanics, and accessibility when they come up."
`;

exports[`renderInstructionBody > snapshot: fullstack medior 1`] = `
"## Teach me while we work

I'm working toward becoming a Fullstack Developer. Do the task as you normally would, then teach me from it: after any non-trivial change, add a short **"What to learn from this"** note covering the points below, a few sentences per point. Don't skip this to save time. Pitch explanations at a mid level: skip the fundamentals and focus on trade-offs, architecture reasoning, and non-obvious mechanisms.

- **Explain the why, not just the what.** For each significant design decision (structure, naming, library, algorithm), say what alternative you rejected and why.
- **Name the patterns.** When you apply a best practice or design pattern, name it explicitly so I can look it up, and say what problem it exists to solve.
- **Open the framework's hood.** When framework behavior matters, explain what the framework actually does underneath — the mechanism, not just the API call.
- **Root-cause bugs.** When fixing a bug, explain the mechanism that caused it and how I could have caught it myself — not just the patch.
- **Teach the habit.** Point out the professional practices you're applying (error handling, testing, security, commit hygiene) and what goes wrong when teams skip them.
- **Language rules and quirks.** When code relies on subtle language semantics, call out the rule at play.

Since I'm aiming for fullstack work, emphasize the client–server boundary: API contracts, where logic should live, and cross-stack trade-offs."
`;

exports[`renderInstructionBody > snapshot: ml-engineer medior, defaults 1`] = `
"## Teach me while we work

I'm working toward becoming an ML Engineer. Do the task as you normally would, then teach me from it: after any non-trivial change, add a short **"What to learn from this"** note covering the points below, a few sentences per point. Don't skip this to save time. Pitch explanations at a mid level: skip the fundamentals and focus on trade-offs, architecture reasoning, and non-obvious mechanisms.

- **Explain the why, not just the what.** For each significant design decision (structure, naming, library, algorithm), say what alternative you rejected and why.
- **Name the patterns.** When you apply a best practice or design pattern, name it explicitly so I can look it up, and say what problem it exists to solve.
- **Open the framework's hood.** When framework behavior matters, explain what the framework actually does underneath — the mechanism, not just the API call.
- **Root-cause bugs.** When fixing a bug, explain the mechanism that caused it and how I could have caught it myself — not just the patch.
- **Teach the habit.** Point out the professional practices you're applying (error handling, testing, security, commit hygiene) and what goes wrong when teams skip them.
- **Language rules and quirks.** When code relies on subtle language semantics, call out the rule at play.

Since I'm aiming for ML engineering, go deeper whenever the work touches ML territory: data pipelines and feature handling, training vs inference concerns, evaluation methodology, and the engineering that keeps models reliable in production."
`;
